src/styles/Team.css
.team-container {
  background-color: #2b48be;
  height: 170vh;
  font-family: "Inter", sans-serif;
  overflow-x: hidden !important;
}
.dark-team-container {
  background-color: #12141d;
}
.team-align-cards {
  display: flex;
  flex-direction: column;
  gap: 5vh 10vh;
  padding: 50px 0;
  margin-left: 16vw;
}
.team-memberImg {
  width: 10vw;
  height: 20vh;
  border-radius: 50%;
  margin-left: 10px;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}
.team-align--horizontal {
  display: flex;
  flex-direction: row;
  gap: 0 20px;
}
.team-header {
  text-align: center;
  font-size: 18px;
  color: white;
  font-weight: bold;
}
.team-designation {
  text-align: center;
  font-size: 14px;
  color: white;
  margin-top: -10px;
}
.teamSocial {
  display: flex;
  justify-content: center;
  gap: 0 20px;
  cursor: pointer;
}
.teamSocial img {
  width: 20px;
}
.team-heading {
  text-align: center;
  font-size: 40px;
  margin-top: 10vh;
  color: white;
}
.teamMore-btn {
  text-transform: inherit !important;
  color: var(--tezos-white) !important;
  background-color: #647afc !important;
  width: 450px !important;
  height: 55px !important;
  font-size: var(--font-size-mod-medium) !important;
  border-radius: 10px !important;
  margin: 4% 25% 0 34% !important;
}
.dark-teamMore-btn {
  color: var(--tezos-text) !important;
  background-color: #2a2c34 !important;
}
.teamMore-btn:hover {
  background-color: #4863ff !important;
}
.dark-teamMore-btn:hover {
  background-color: #35363a !important;
}
@media (min-width: 320px) and (max-width: 360px) {
  .team-container {
    height: 400vh !important;
  }
  .team-align--horizontal {
    flex-direction: column !important;
    margin-top: -8vh !important;
  }
  .team-memberImg {
    width: 25vw !important;
    height: 15vh !important;
  }
  .team-header,
  .team-designation,
  .teamSocial {
    margin-left: -70px !important;
  }
  .team-align-cards {
    margin-left: 25vw !important;
  }
  .teamMore-btn {
    margin-left: 18vw !important;
    width: 60vw !important;
    font-size: 12px !important;
  }
}
@media (min-width: 361px) and (max-width: 455px) {
  .team-container {
    height: 430vh !important;
  }
  .team-align--horizontal {
    flex-direction: column !important;
    margin-top: -8vh !important;
  }
  .team-memberImg {
    width: 25vw !important;
    height: 18vh !important;
  }
  .team-header,
  .team-designation,
  .teamSocial {
    margin-left: -70px !important;
  }
  .team-align-cards {
    margin-left: 25vw !important;
  }
  .teamMore-btn {
    margin-left: 18vw !important;
    width: 60vw !important;
  }
}
@media (min-width: 456px) and (max-width: 700px) {
  .team-container {
    height: 200vh !important;
  }
  .team-align-cards {
    margin-left: 17vw !important;
  }
  .team-header {
    font-size: 14px !important;
    margin-left: -20px !important;
  }
  .team-designation {
    font-size: 12px !important;
    margin-left: -20px !important;
  }
  .team-memberImg {
    margin-left: -10px !important;
  }
  .teamSocial img {
    width: 2vw !important;
  }
  .teamSocial {
    margin-left: -20px !important;
  }
  .teamMore-btn {
    margin-left: 18vw !important;
  }
}
@media (min-width: 701px) and (max-width: 920px) {
  .team-container {
    height: 160vh !important;
  }
  .team-align-cards {
    margin-left: 5vw !important;
  }
  .team-header {
    font-size: 14px !important;
    margin-left: -20px !important;
  }
  .team-designation {
    font-size: 12px !important;
    margin-left: -20px !important;
  }
  .team-memberImg {
    margin-left: 25px !important;
    height: 15vh !important;
  }
  .teamSocial img {
    width: 2vw !important;
  }
  .teamSocial {
    margin-left: -20px !important;
  }
  .team-align--horizontal {
    margin-bottom: -20vh !important;
  }
  .teamMore-btn {
    margin-top: 5vh !important;
    margin-left: 32vw !important;
    width: 40vw !important;
    font-size: 12px !important;
  }
}
@media (min-width: 921px) and (max-width: 1024px) {
  .team-container {
    height: 120vh !important;
  }
  .team-align-cards {
    margin-left: 5vw !important;
  }
  .team-header {
    font-size: 14px !important;
    margin-left: -20px !important;
  }
  .team-designation {
    font-size: 12px !important;
    margin-left: -20px !important;
  }
  .team-memberImg {
    margin-left: 25px !important;
    height: 15vh !important;
  }
  .teamSocial img {
    width: 2vw !important;
  }
  .teamSocial {
    margin-left: -20px !important;
  }
  .team-align--horizontal {
    margin-bottom: -20vh !important;
  }
  .teamMore-btn {
    margin-top: 10vh !important;
    margin-left: 32vw !important;
    width: 40vw !important;
    font-size: 12px !important;
  }
}

